# ai-toolbox

./: .gitignore  CLAUDE.md  README.md  start-up.sh
.claude-plugin/: marketplace.json
.github/workflows/: file-review-release.yml  hive-release.yml
ai-tracker/: README.md  pyproject.toml
ai-tracker/src/ai_tracker/: __init__.py  cli.py  config.py  screenshot.py  setup.py
ai-tracker/src/ai_tracker/git/: install.py  post_commit.py
ai-tracker/src/ai_tracker/hooks/: capture_before_write.py  log_claude_edit.py
ai-tracker/src/ai_tracker/stats/: display.py  query.py
arewedoomedyet.dev/: .gitignore  build.ts  ecosystem.config.cjs  index.html  index.ts  package.json  tsconfig.json  vercel.json
arewedoomedyet.dev/convex/: schema.ts  votes.ts
arewedoomedyet.dev/src/: App.tsx  index.css  main.tsx
brain/: .gitignore  README.md  package.json
brain/src/: index.ts
cc-hooks/: README.md  example.py  mac-notify.py  setup.py
cc-notch/: README.md  biome.json  package.json  tsconfig.json
cc-notch/scripts/: install.ts  uninstall.ts
cc-notch/src/: plugin.ts
cc-orch-mcp/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  biome.json  docker-compose.lead.yml  docker-compose.worker.yml  docker-entrypoint.sh  example-req-meta.json  package.json  slack-manifest.json  tsconfig.json
cc-orch-mcp/cc-plugin/: .mcp.json  README.md
cc-orch-mcp/deploy/: DEPLOY.md  agent-swarm.service  install.ts  prod-db.ts  uninstall.ts
cc-orch-mcp/src/: claude.ts  cli.tsx  http.ts  server.ts  stdio.ts  (+1 more)
cc-what/: .gitignore  CLAUDE.md  README.md  biome.json  package.json  tsconfig.json
ctx-viz/: README.md  SPEC.md  package.json  tsconfig.json
dns/: README.md  main.py  main.ts  pyproject.toml
dokcli/: README.md  package.json  tsconfig.json
file-review/: HOMEBREW_SETUP_PROMPT.md  README.md  index.html  package.json
file-review/src-tauri/: Cargo.toml  tauri.conf.json
file-review/src-tauri/capabilities/: default.json
file-review/src-tauri/src/: comments.rs  config.rs  file_ops.rs  lib.rs  main.rs  tunnel.rs  web_server.rs
hive/: README.md  RELEASE.md  forge.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.main.config.mjs  vite.preload.config.mjs  vite.renderer.config.mjs
hn/: .gitignore  CLAUDE.md  README.md  ecosystem.config.cjs  migrate-threads.ts  package.json
hn-sql/: .gitignore  DEPLOYMENT.md  README.md  consolidate.sh  pyproject.toml  refresh.sh  sync.sh
hn-sql/src/hn_sql/: __init__.py  api.py  cache.py  checkpoint.py  cli.py  fetcher.py  progress.py  schema.py  writer.py
hn-sql/thoughts/shared/plans/: 2025-12-08-hn-parquet-service.md  2025-12-11-api-command-fastapi.md
invoice-cli/: .gitignore  README.md  pyproject.toml
invoice-cli/baml_src/: clients.baml  generators.baml  invoice.baml
invoice-cli/src/invoice_cli/: classifier.py  cli.py  config.py  gdrive.py  gmail.py  pdf.py  storage.py  tui.py
invoice-cli/src/invoice_cli/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
meme-gen/: README.md  package.json
monitors/: QUICKSTART.md  README.md  pyproject.toml
monitors/src/monitor_manager/: __init__.py  capture.py  cli.py  daemon.py  monitor_info.py  restore.py  storage.py
ndim-snake/: index.html  package-lock.json  package.json  serve.js  tsconfig.json
nvim-writer/: IMPLEMENTATION_PLAN.md  monaco-vim.d.ts  package.json  tailwind.config.ts
oapi/: README.md  biome.json  package.json  tsconfig.json
shot/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
thoughts-viz/: CLAUDE.md  biome.json  build.ts  package.json  tsconfig.json
willitfront.page/: .env.example  CLAUDE.md  README.md  build.ts  index.html  index.ts  package.json  tsconfig.json  vercel.json  vite.config.ts
wts/: README.md  package.json
(+695 files in other folders)
